# optional

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  SPEC.md  flake.nix
.github/workflows/: ci.yml
clob/: Cargo.toml
clob/src/: lib.rs  main.rs
options/: Cargo.toml
options/src/: lib.rs  main.rs  mock_erc20.rs
options/tests/: exercise_call.rs  integration.rs  safe_transfer.rs  test_erc20.rs  write_call.rs
vault/: Cargo.toml  README.md
vault/src/: lib.rs  main.rs
