[workspace]
resolver = "2"
members = ["options", "clob"]

[workspace.lints.clippy]
unwrap_used = "deny"
enum_glob_use = "deny"

# `priority = -1` allow for allowing lints enabled by a group to be re-disabled
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

doc_markdown = "allow"
items_after_statements = "allow"
redundant_pub_crate = "allow"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xgleb/optional"

[workspace.dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
stylus-sdk = "0.9.0"
hex = { version = "0.4", default-features = false }
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
dotenv = "0.15.0"
motsu = "0.1.0"
proptest = "1.4"
serde = "=1.0.219"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = 3
