[package]
name = "options"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["arbitrum", "ethereum", "stylus", "options"]
description = "On-chain options token contract for Arbitrum Stylus"

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
stylus-sdk.workspace = true
hex.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
tokio.workspace = true
ethers.workspace = true
eyre.workspace = true
stylus-sdk = { workspace = true, features = ["stylus-test"] }
dotenv.workspace = true
motsu.workspace = true
proptest.workspace = true

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "options"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[lints]
workspace = true
